# TypeHintLua

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.sh  main.thlua  pack.py  root.thlua  test.py  thlua.lua  throot.thlua
3rd/: lua-chrono.cpp  lua_wasm.cpp  lua_with_libs.c  some_libs.h
3rd/vim/: thlua_indent.vim  thlua_syntax.vim
3rd/vscode-lsp/: .gitignore  package-lock.json  package.json
3rd/web/: emlua.js  emlua.wasm
examples/: 0_hello.thlua  0_helloworld.thlua  1_1_syntax_hint.thlua  1_2_syntax_cast.thlua  1_3_syntax_contine.thlua  2_1_type_basic.thlua  2_2_type_union.thlua  2_3_type_object.thlua  2_4_type_table.thlua  2_5_type_function.thlua  2_6_type_opentype.thlua  3_template.thlua  4_1_oo_class.thlua  4_2_oo_more.thlua  class_function.thlua  hello.thlua  hint_space.thlua  multi_ret.thlua  open_type.thlua  type_cast.thlua  union_struct.thlua
lib/: chrono.d.thlua  luv.d.thlua  path.d.thlua
rust/: build.rs  main.rs
test/: TestCase.thlua  caseAuto.thlua  caseCall.thlua  caseMixOpen.thlua  caseOpenAuto.thlua  caseUpValue.thlua  codeUnreachable.thlua  testMain.thlua
test/caseClass/: caseFillMember.thlua  caseRecur.thlua
test/caseFlow/: caseUpValue.thlua
test/caseFunc/: caseAutoFn.thlua  caseAutoReturn.thlua  caseCall.thlua  caseMixOpen.thlua  caseOpenAuto.thlua
test/caseRequire/: ClassA.thlua  ClassB.thlua  base.thlua  entry.thlua  pkg.lua
test/caseReturn/: castReturn.thlua  returnCheck.thlua  returnCheck2.thlua
test/caseTable/: caseAutoCast.thlua  caseFnCast.thlua  caseResurciveGetSet.thlua  caseTypeAfterCast.thlua
test/caseType/: fnInclude.thlua  interfaceInclude.thlua  objInter.thlua  unionRecursive.thlua
thlua/: Enum.lua  Enum.thlua  Exception.lua  Exception.thlua  Hook.thlua  LuaPromise.thlua  TestCase.thlua  boot.lua  class.thlua  native.thlua  platform.thlua  sth.thlua
thlua/auto/: AutoHolder.thlua  AutoTail.thlua  AutoTuple.thlua  AutoTupleTail.thlua
thlua/builder/: DoBuilder.thlua  FunctionBuilder.lua  FunctionBuilder.thlua  TableBuilder.lua  TableBuilder.thlua  TrivialMaker.thlua  TypeMaker.thlua  UnionMaker.thlua
thlua/code/: AutoFlag.thlua  CodeEnv.lua  CodeEnv.thlua  CodeKindEnum.thlua  FocusCode.thlua  HintGenVisitor.thlua  HintGener.thlua  HintScopeVisitor.thlua  NoServerLoader.thlua  Node.lua  Node.thlua  ParseEnv.d.thlua  ParseEnv.lua  ParseEnv.thlua  ReferVisitor.thlua  SearchVisitor.thlua  SplitCode.thlua  SymbolVisitor.thlua  TriggerCode.thlua  TypeHintGen.lua  TypeHintGen.thlua  VisitorExtend.lua  VisitorExtend.thlua  oldvisitor.lua  parser.lua  thloader.thlua
thlua/context/: ApplyContext.thlua  AssignContext.thlua  AutoFnCastDict.thlua  BaseContext.thlua  BaseStack.thlua  BodyContext.thlua  Branch.thlua  FieldCompletion.thlua  LateCastDict.thlua  LogicContext.thlua  MorePushContext.thlua  NoPushContext.thlua  OnePushContext.thlua  OpenContext.thlua  OpenStack.thlua  OperContext.thlua  PushContext.thlua  RecurChain.thlua  Region.thlua  ReturnContext.thlua  SealContext.thlua  SealStack.thlua
thlua/func/: AnyFunction.thlua  AutoArguments.lua  AutoArguments.thlua  AutoFunction.thlua  AutoMemberFunction.thlua  AutoRetFnCom.thlua  BaseFunction.thlua  ClassFactory.thlua  ClassFnCom.thlua  DefaultFnCom.thlua  DefaultFnInfo.thlua  FixedRetFnCom.thlua  FnComClass.thlua  FnHintCom.thlua  LateFnCom.thlua  LuaFunction.thlua  MemberFunction.thlua  MonoFunction.thlua  NativeFunction.thlua  NewFnCom.thlua  NewFnInfo.thlua  NewRetFnCom.thlua  NocheckFnCom.thlua  NocheckFnInfo.thlua  OpenFnCom.thlua  OpenFnInfo.thlua  OpenFunction.thlua  PolyFunction.thlua  SealFunction.thlua  TypeFuncBuilder.thlua  TypeFunction.thlua  TypedFunction.thlua  TypedMemberFunction.thlua  Variable.thlua
thlua/global/: basic.thlua  coroutine.thlua  debug.thlua  global.thlua  io.thlua  math.lua  math.thlua  os.thlua  package.thlua  string.thlua  table.thlua  utf8.thlua
thlua/manager/: DirtyProcessor.thlua  HashableTypeSet.thlua  HintTask.thlua  ListDict.thlua  NameLocation.thlua  Namespace.lua  Namespace.thlua  ScheduleEvent.thlua  ScheduleManager.thlua  ScheduleTask.thlua  SealTask.thlua  TypeCollection.thlua  TypeManager.thlua  TypeRelation.thlua
thlua/object/: AutoTable.thlua  BaseObject.thlua  BaseTable.thlua  ClassCom.thlua  ClassTable.thlua  ClassTableCom.thlua  DefaultTableCom.thlua  Interface.thlua  LuaTable.thlua  MetaEventCom.thlua  MetaObject.thlua  OpenTable.thlua  OpenTableCom.thlua  SealTable.thlua  Struct.thlua  StructTableCom.thlua  TableComClass.thlua  TypedObject.thlua
thlua/refer/: AsyncUnion.thlua  AutoFunction.thlua  AutoReferCom.thlua  BaseReference.thlua  BaseTask.thlua  ClassFactory.thlua  ClassReferCom.thlua  FuncMakerCom.thlua  GenericReferCom.thlua  HolderState.thlua  ISealFunction.thlua  Letspace.thlua  Namespace.thlua  Reference.thlua  Rootspace.thlua  SpaceBuiltin.thlua  SpaceTable.thlua  TemplateReferCom.thlua  TypeReferCom.thlua  UnionReferCom.thlua
thlua/runtime/: ApplyContext.thlua  BaseContext.thlua  BaseRuntime.thlua  BaseStack.thlua  (+23 more)
(+207 files in other folders)
