[package]
name = "thlua"
version = "0.0.1"
edition = "2021"
build = "rust/build.rs"

[[bin]]
name = "lua"
path = "rust/main.rs"

[dependencies]
mlua = { version = "0.9", features = ["lua54", "vendored"] }
ouroboros = "0.18.3"
rustyline = "14.0"

[build-dependencies.cc]
version = "1.0"

[build-dependencies.cmake]
version = "0.1"

[build-dependencies.lua-src]
version = ">= 547.0.0, < 547.1.0"
